# rust-actions-demo

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: labeler.yml
.github/workflows/: release-new-action-version.yml  workflow.yaml
src/: lib.rs  main.rs
tests/: demo_test.rs
