[package]
name = "x_demo"
version = "0.1.0"
edition = "2021"
description = "rust project demo/template with github actions."
license = "Apache-2.0"
author = ["xiexianbin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
